fix(ux): callout without title color bleed into codeblocks

--- a/src/styles/_callouts.scss
+++ b/src/styles/_callouts.scss
@@ -34,7 +34,8 @@
 		color: var(--calloutFg);
 	}
 
-	.icon + &-content *:not(a),
+	.icon + &-content > p,
+	.icon + &-content > p *:not(a),
 	&-title * {
 		color: var(--calloutFg);
 	}
